# hushclaw

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  install.ps1  install.sh  kenya_tecno_camon_50_ai_report.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  uninstall.ps1  uninstall.sh  vite.config.ts
.github/workflows/: ci.yml  release.yml
config/: ghostclaw.toml.example  hushclaw.toml.example
docs/: files-download-hardening-verification.md  hermes-agent-upgrade-comparison-2026-06.md  memory-evolution-architecture.md  x-operator-test-matrix.md
docs/adr/: ADR-0001-webui-update-check-and-upgrade.md  ADR-0002-x-operator-skill-task-contract.md  ADR-0003-runtime-hooks-and-session-intelligence.md  ADR-0004-keep-the-core-runtime-small.md  ADR-0005-event-envelope-contract.md  ADR-0006-module-ownership-lifecycle.md  ADR-0007-agent-os-boundaries.md  ADR-0008-distro-boundary.md  ADR-0009-kernel-distro-contract.md  ADR-0010-federated-knowledge.md  ADR-0011-agentos-context-runtime-boundaries.md
ghostclaw/: __init__.py  agent.py  browser.py  cli.py  exceptions.py  gateway.py  loop.py  scheduler.py  server.py
ghostclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ghostclaw/config/: __init__.py  defaults.py  loader.py  schema.py  writer.py
ghostclaw/connectors/: base.py  dingtalk.py  discord.py  feishu.py  manager.py  slack.py  telegram.py  wecom.py
ghostclaw/context/: __init__.py  engine.py  policy.py
ghostclaw/memory/: __init__.py  db.py  fts.py  markdown.py  store.py  vectors.py
ghostclaw/providers/: __init__.py  aigocode_raw.py  base.py  (+6 more)
hushclaw/: __init__.py  _build_info.py  agent.py  browser.py  cli.py  exceptions.py  gateway.py  loop.py  os_api.py  os_contracts.py  paths.py  prompt_blocks.py  prompts.py  scheduler.py  server.py  server_impl.py  web_shells.py
scripts/: bench_startup.py  sync_clawhub.sh
skill-packages/: .skill-lock.json  DEVELOPER_GUIDE.md
tests/: __init__.py  test_agent_os_boundaries.py  test_app_inbound_automation.py  test_background_claim_guard.py  test_browser_tools.py  test_caldav_sync.py  test_cli_backup.py  test_config.py  test_connectors.py  test_conversation_bindings.py  test_core_errors.py  test_docs_governance.py  test_evolution.py  test_file_attach_edit_stability.py  test_gateway.py  test_harness.py  test_html_artifacts.py  test_interaction_gate.py  test_local_calendar_tools.py  test_memory.py  test_message_controls.py  test_opc_solution.py  test_pptx_spec_tools.py  test_prompt_blocks.py  test_rich_content.py  test_runtime_services.py  test_scheduler.py  test_search_runtime.py  test_security.py  test_server_slash.py  test_skill_handler.py  test_skill_loader.py  test_skill_scope_enforcement.py  test_strategy.py  test_streaming.py  test_tool_runtime.py  test_tools.py  test_update.py  test_web_chat.py  test_web_shells.py  (+2 more)
thinker-paradigm/: SKILL.md
(+418 files in other folders)
