[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostclaw"
version = "0.2.0"
description = "Lightweight AI Agent framework with persistent memory"
requires-python = ">=3.11"
dependencies = []  # zero mandatory deps — pure stdlib

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
server = ["websockets>=12.0", "openai>=1.0"]
browser = ["playwright>=1.40"]
all = ["anthropic>=0.40", "openai>=1.0", "websockets>=12.0", "playwright>=1.40"]

[project.scripts]
ghostclaw = "ghostclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghostclaw*"]

[tool.setuptools.package-data]
ghostclaw = ["py.typed", "web/*", "skills/builtins/**/SKILL.md"]
