[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hushclaw"
version = "0.1.4"
description = "Lightweight AI Agent framework with persistent memory"
requires-python = ">=3.11"
dependencies = []  # zero mandatory deps — pure stdlib

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
gemini = ["google-genai>=1.0"]
server = ["websockets>=12.0", "openai>=1.0"]
browser = ["playwright>=1.40"]
calendar = ["caldav>=1.3"]
feishu = ["lark-oapi>=1.0"]
all = ["anthropic>=0.40", "openai>=1.0", "google-genai>=1.0", "websockets>=12.0", "playwright>=1.40", "caldav>=1.3", "lark-oapi>=1.0"]

[project.scripts]
hushclaw = "hushclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hushclaw*"]

[tool.setuptools.package-data]
hushclaw = ["py.typed", "web/*", "skills/builtins/**/SKILL.md"]
