[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hushclaw"
dynamic = ["version"]
description = "Lightweight AI Agent framework with persistent memory"
requires-python = ">=3.11"
dependencies = []  # zero mandatory deps — pure stdlib

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
gemini = ["google-genai>=1.0"]
server = ["websockets>=12.0", "openai>=1.0"]
browser = ["playwright>=1.40", "playwright-stealth>=0.0.5"]
calendar = ["caldav>=1.3"]
feishu = ["lark-oapi>=1.0"]
web = ["curl-cffi>=0.7", "brotlicffi>=1.0"]
all = ["anthropic>=0.40", "openai>=1.0", "google-genai>=1.0", "websockets>=12.0", "playwright>=1.40", "playwright-stealth>=0.0.5", "curl-cffi>=0.7", "brotlicffi>=1.0", "caldav>=1.3", "lark-oapi>=1.0"]

[project.scripts]
hushclaw = "hushclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hushclaw*"]

[tool.setuptools.dynamic]
version = {attr = "hushclaw.__version__"}

[tool.setuptools.package-data]
hushclaw = ["py.typed", "web/**/*", "skills/builtins/**/SKILL.md"]
